Editor: Greatly speed up launching the game